test/trivial/deitz/test_integer_method3.chpl
def int.print() {
  writeln("int.print = ", this);
}

var i : int = 12;
i.print();
var j : int(64) = 14;
j.print();
